разные правки и новые селекты

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a class="done" href="./pages/auth/login.html" target="_blank">Войти</a></li>
         <li><a class="done" href="./pages/auth/register.html" target="_blank">Регистрация</a></li>
         <li><a class="done" href="./pages/auth/forgot.html" target="_blank">Забыли пароль</a></li>
-        <li><a class="done" href="./pages/account/account.html" target="_blank">Личный кабинет</a></li>
+        <li><a class="done" href="./pages/account/account.html" target="_blank">Личный кабинет дарителя</a></li>
         <li><a class="done" href="./pages/account/family.html" target="_blank">Личный кабинет семьи</a></li>
         <li><a class="done" href="./pages/news.html" target="_blank">Новость</a></li>
       </ol>
