--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -110,8 +110,9 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
- <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="../scripts/jquery-3.4.1.min.js"></script>
+    <script src="../scripts/select2.full.min.js"></script>
+ <script src="../scripts/jquery.validate.min.js"></script>
  <script src="../../scripts/scripts.js"></script>
  <script src="../../scripts/validation.js"></script>
 </body>
