--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -254,8 +254,8 @@
                 <div class="Footer_bot">
                     <div class="Footer_botLeft">
                         <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                        <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                target="_blank">bsq</a></p>
+                        <p class="Footer_designedByMin">Сделано в <a href="#"
+                                target="_blank">Nikoland</a></p>
                     </div>
                     <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                             class="Footer_footerSocial"><img
@@ -265,7 +265,7 @@
                                 src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                             href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                 src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                        <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                        <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                         </p>
                     </div>
                 </div>
