--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -2,26 +2,26 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" sizes="192x192" href="../../assets/icons/apple-icon.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="../../assets/icons/apple-icon.png">
-    <link rel="icon" type="image/png" sizes="57x57" href="../../assets/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="../../assets/icons/apple-icon-57x57.png">
-    <link rel="icon" type="image/png" sizes="60x60" href="../../assets/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="../../assets/icons/apple-icon-60x60.png">
-    <link rel="icon" type="image/png" sizes="76x76" href="../../assets/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="../../assets/icons/apple-icon-76x76.png">
-    <link rel="icon" type="image/png" sizes="72x72" href="../../assets/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="../../assets/icons/apple-icon-72x72.png">
-    <link rel="icon" type="image/png" sizes="114x114" href="../../assets/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="../../assets/icons/apple-icon-114x114.png">
-    <link rel="icon" type="image/png" sizes="120x120" href="../../assets/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="../../assets/icons/apple-icon-120x120.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="../../assets/icons/apple-icon-180x180.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../assets/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="144x144" href="../../assets/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="../../assets/icons/apple-icon-144x144.png">
-    <link rel="icon" type="image/png" sizes="152x152" href="../../assets/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="../../assets/icons/apple-icon-152x152.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../assets/icons/apple-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="../assets/icons/apple-icon.png">
+    <link rel="icon" type="image/png" sizes="57x57" href="../assets/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="../assets/icons/apple-icon-57x57.png">
+    <link rel="icon" type="image/png" sizes="60x60" href="../assets/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="../assets/icons/apple-icon-60x60.png">
+    <link rel="icon" type="image/png" sizes="76x76" href="../assets/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="../assets/icons/apple-icon-76x76.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="../assets/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="../assets/icons/apple-icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="114x114" href="../assets/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="../assets/icons/apple-icon-114x114.png">
+    <link rel="icon" type="image/png" sizes="120x120" href="../assets/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="../assets/icons/apple-icon-120x120.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="../assets/icons/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../assets/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="../assets/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="../assets/icons/apple-icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="../assets/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="../assets/icons/apple-icon-152x152.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,7 +43,6 @@
     <meta property="og:url" content="https://podaripodarok.org//feedback">
     <link rel="canonical" href="https://podaripodarok.org//feedback">
     <meta name="next-head-count" content="42">
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
@@ -626,8 +625,8 @@
                     <div class="Footer_bot">
                         <div class="Footer_botLeft">
                             <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                            <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                    target="_blank">bsq</a></p>
+                            <p class="Footer_designedByMin">Сделано в <a href="#"
+                                    target="_blank">Nikoland</a></p>
                         </div>
                         <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                                 class="Footer_footerSocial"><img
@@ -637,7 +636,7 @@
                                     src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                                 href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                     src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                            <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                            <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                             </p>
                         </div>
                     </div>
@@ -734,10 +733,12 @@
         </div>
     </div>
 </div>
-<script>
-    Fancybox.bind("[data-fancybox]", {});
-</script>
+  
+<script src="../../scripts/jquery-3.4.1.min.js"></script>
+<script src="../../scripts/select2.full.min.js"></script>
+<script src="../../scripts/plyr.js"></script>
+<script src="../../scripts/fancybox.js"></script>
 <script src="../../scripts/scripts.js"></script>
-<script src="../../scripts/selectnative.js"></script>
+
 </body>
 </html>
