--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -638,13 +638,13 @@
                                             <div class="react-responsive-modal-modal PopUp_modal" role="dialog" aria-modal="true" data-testid="modal" tabindex="-1" style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-modal-in; background: var(--white); box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 64px, rgba(0, 0, 0, 0.06) 0px 0px 20px, rgba(0, 0, 0, 0.06) 0px 0px 8px, rgba(0, 0, 0, 0.04) 0px 0px 4px; border-radius: 24px;">
                                                 <div>
                                                     <div class="Reports_viewerWrap">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
-                                                        <img src="../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
+                                                        <img src="../../assets/report.jpg" alt="">
                                                     </div>
                                                 </div>
                                                 <button class="react-responsive-modal-closeButton" data-testid="close-button"><svg width="28" height="28" viewBox="0 0 36 36" data-testid="close-icon">
@@ -796,8 +796,8 @@
                     <div class="Footer_bot">
                         <div class="Footer_botLeft">
                             <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                            <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                    target="_blank">bsq</a></p>
+                            <p class="Footer_designedByMin">Сделано в <a href="#"
+                                    target="_blank">Nikoland</a></p>
                         </div>
                         <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                                 class="Footer_footerSocial"><img
@@ -807,7 +807,7 @@
                                     src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                                 href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                     src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                            <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                            <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                             </p>
                         </div>
                     </div>
@@ -816,8 +816,11 @@
         </footer>
     </div>
 
-        <script src="../../scripts/selectnative.js"></script>
-        <script src="../../scripts/scripts.js"></script>
+        
+    <script src="../../scripts/jquery-3.4.1.min.js"></script>
+    <script src="../../scripts/select2.full.min.js"></script>
+    <script src="../../scripts/plyr.js"></script>
+    <script src="../../scripts/scripts.js"></script>
 </body>
 
 </html>
