--- a/pages/main.html
+++ b/pages/main.html
@@ -493,16 +493,14 @@
                     <div class="Carousel_carouselRoot " style="max-width: 1600px; margin: 64px auto 88px;">
                         <div class="slick-slider slick-initialized">
                             <div class="slick-list">
-                                <div class="slick-track"
-                                    style="width: 1300px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                                    <div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1"
-                                        aria-hidden="false" style="outline: none; width: 1300px;">
+                                <div class="slick-track">
+                                    <div  class="slick-slide slick-active slick-current" >
                                         <div>
                                             <div class="Event_eventRoot">
                                                 <div class="Event_bg">
                                                     <div class="Event_preview"
                                                         style="background: url(&quot;https://storage.yandexcloud.net/pp-prod/illeaster_5c8036c48b.svg&quot;) 0px center / contain no-repeat;">
-                                                        <div class="Timer_timerRoot Event_timer" id="timer" data-deadline="2024-08-05 12:00:00 GMT+03:00">
+                                                        <div class="Timer_timerRoot Event_timer" id="timer" data-deadline="2024-09-05 12:00:00 GMT+03:00">
                                                             <p class="Timer_heading">До следующей акции</p>
                                                             <div class="Timer_timer">
                                                                 <div class="Timer_timerItem">
@@ -882,12 +880,8 @@
                 <section class="IndexPage_section IndexPage_section_divider" id="activities">
                     <h1>Мероприятия</h1>
                     <div class="Carousel_carouselRoot " style="max-width: 1600px; margin: 64px auto 56px;">
-                        <div class="slick-slider slick-initialized">
-                            <div class="slick-list">
-                                <div class="slick-track"
-                                    style="width: 1300px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                                    <div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1"
-                                        aria-hidden="false" style="outline: none; width: 400px;">
+                        <div class="multi-slider">
+                                    <div data-index="0" class="slick-slide" >
                                         <div>
                                             <div class="Action_rootAction ">
                                                 <div
@@ -911,8 +905,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div data-index="1" class="slick-slide slick-active" tabindex="-1" aria-hidden="false"
-                                        style="outline: none; width: 400px;">
+                                    <div data-index="1" class="slick-slide " tabindex="-1" aria-hidden="false">
                                         <div>
                                             <div class="Action_rootAction ">
                                                 <div
@@ -936,8 +929,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div data-index="2" class="slick-slide slick-active" tabindex="-1" aria-hidden="false"
-                                        style="outline: none; width: 400px;">
+                                    <div data-index="2" class="slick-slide " tabindex="-1" aria-hidden="false">
                                         <div>
                                             <div class="Action_rootAction ">
                                                 <div
@@ -961,8 +953,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
                         </div>
                     </div><a
                         class="Simple_simpleButtonRoot Simple_large Simple_outline  Simple_responsive"
@@ -971,12 +961,8 @@
                 <section class="IndexPage_section" id="news">
                     <h1>Новости и отчёты</h1>
                     <div class="Carousel_carouselRoot " style="max-width: 1600px; margin: 64px auto 56px;">
-                        <div class="slick-slider slick-initialized">
-                            <div class="slick-list">
-                                <div class="slick-track"
-                                    style="width: 1300px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                                    <div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1"
-                                        aria-hidden="false" style="outline: none; width: 400px;">
+                        <div class="multi-slider">
+                                    <div data-index="0" class="slick-slide " tabindex="-1">
                                         <div>
                                             <div class="Action_rootAction ">
                                                 <div
@@ -1002,8 +988,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div data-index="1" class="slick-slide slick-active" tabindex="-1" aria-hidden="false"
-                                        style="outline: none; width: 400px;">
+                                    <div data-index="1" class="slick-slide " tabindex="-1" aria-hidden="false">
                                         <div>
                                             <div class="Action_rootAction ">
                                                 <div
@@ -1028,7 +1013,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div data-index="2" class="slick-slide slick-active" tabindex="-1" aria-hidden="false"
+                                    <div data-index="2" class="slick-slide " tabindex="-1" aria-hidden="false"
                                         style="outline: none; width: 400px;">
                                         <div>
                                             <div class="Action_rootAction ">
@@ -1054,8 +1039,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
                         </div>
                     </div><a
                         class="Simple_simpleButtonRoot Simple_large Simple_outline  Simple_responsive"
@@ -1399,8 +1382,8 @@
                     <div class="Footer_bot">
                         <div class="Footer_botLeft">
                             <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                            <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                    target="_blank">bsq</a></p>
+                            <p class="Footer_designedByMin">Сделано в <a href="#"
+                                    target="_blank">Nikoland</a></p>
                         </div>
                         <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                                 class="Footer_footerSocial"><img
@@ -1410,7 +1393,7 @@
                                     src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                                 href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                     src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                            <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                            <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                             </p>
                         </div>
                     </div>
@@ -1418,10 +1401,11 @@
             </div>
         </footer>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="../scripts/jquery-3.4.1.min.js"></script>
+    <script src="../scripts/select2.full.min.js"></script>
+    <script src="../scripts/jquery.validate.min.js"></script>
     <script src="../scripts/slick.min.js"></script>
-    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <script src="../scripts/plyr.js"></script>
     <script src="../scripts/scripts.js"></script>
     <script src="../scripts/timer.js"></script>
     <script src="../scripts/validation.js"></script>
