--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -209,7 +209,7 @@
                                     style="display: flex; align-items: center;"><span>
                                         <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value="">
+                                            <input type="checkbox" name=""  value="" hidden="" class="news_category">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
                                         </div>
                                     </span><span class=""
@@ -219,7 +219,7 @@
                                     style="display: flex; align-items: center;"><span>
                                         <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value="">
+                                            <input type="checkbox" name=""  value="" hidden="" class="news_category">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
                                         </div>
                                     </span><span class=""
@@ -229,7 +229,7 @@
                                     style="display: flex; align-items: center;"><span>
                                         <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value="">
+                                            <input type="checkbox" name=""  value="" hidden="" class="news_category">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
                                         </div>
                                     </span><span class=""
@@ -239,7 +239,7 @@
                                     style="display: flex; align-items: center;"><span>
                                         <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value="">
+                                            <input type="checkbox" name=""  value="" hidden="" class="news_category">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
                                         </div>
                                     </span><span class=""
@@ -454,8 +454,8 @@
                     <div class="Footer_bot">
                         <div class="Footer_botLeft">
                             <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                            <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                    target="_blank">bsq</a></p>
+                            <p class="Footer_designedByMin">Сделано в <a href="#"
+                                    target="_blank">Nikoland</a></p>
                         </div>
                         <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                                 class="Footer_footerSocial"><img
@@ -465,7 +465,7 @@
                                     src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                                 href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                     src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                            <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                            <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                             </p>
                         </div>
                     </div>
@@ -473,7 +473,9 @@
             </div>
         </footer>
     </div>
+    <script src="../scripts/jquery-3.4.1.min.js"></script>
+    <script src="../scripts/select2.full.min.js"></script>
+    <script src="../scripts/plyr.js"></script>
     <script src="../scripts/scripts.js"></script>
-    <script src="../scripts/selectnative.js"></script>
 </body>
 </html>
