--- a/pages/donate.html
+++ b/pages/donate.html
@@ -477,6 +477,16 @@
                                     </div>
 
                                 </div>
+                                <div class="Sberbank_sberbank_requisites">
+                                    <p class="Sberbank_head_h5">Реквизиты фонда</p>
+                                    <p class="Sberbank_text"><span>БФ "ПОДАРИ ПОДАРОК"</span></p>
+                                    <p class="Sberbank_text">ИНН <span>5006016221</span></p>
+                                    <p class="Sberbank_text">Номер счета <span>40701810640000000442</span></p>
+                                    <p class="Sberbank_text">БИК <span>044525225</span></p>
+                                    <p class="Sberbank_text">Корр. счет <span>30101810400000000225</span></p>
+                                    <p class="Sberbank_text">Наименование Банка <span>ПАО СБЕРБАНК</span></p>
+                                </div>
+
                                 <p class="text" style="margin-top: 24px;"><a href="/feedback/reports">Отчеты</a> и <a href="/feedback">отзывы</a> о проделанной работе можно посмотреть тут</p>
                                 
                             </div>
@@ -539,8 +549,8 @@
                     <div class="Footer_bot">
                         <div class="Footer_botLeft">
                             <p>© 2022 Фонд «Подари подарок»<br>Все права защищены.</p>
-                            <p class="Footer_designedByMin">Сделано в <a href="https://bsqgroup.ru"
-                                    target="_blank">bsq</a></p>
+                            <p class="Footer_designedByMin">Сделано в <a href="#"
+                                    target="_blank">Nikoland</a></p>
                         </div>
                         <div class="Footer_botRight"><a href="https://vk.com/bfpodaripodarok" target="_blank"
                                 class="Footer_footerSocial"><img
@@ -550,7 +560,7 @@
                                     src="https://storage.yandexcloud.net/pp-prod/youtube_6ad648aea0.svg"></a><a
                                 href="https://t.me/bfpodaripodarok" target="_blank" class="Footer_footerSocial"><img
                                     src="https://storage.yandexcloud.net/pp-prod/other_2_c5195ab6e2.svg"></a>
-                            <p class="Footer_designedBy">Сделано в <a href="https://bsqgroup.ru" target="_blank">bsq</a>
+                            <p class="Footer_designedBy">Сделано в <a href="#" target="_blank">Nikoland</a>
                             </p>
                         </div>
                     </div>
@@ -558,8 +568,9 @@
             </div>
         </footer>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="../scripts/jquery-3.4.1.min.js"></script>
+    <script src="../scripts/select2.full.min.js"></script>
+    <script src="../scripts/jquery.validate.min.js"></script>
     <script src="../scripts/jquery.mask.min.js"></script>
     <script src="../scripts/scripts.js"></script>
     <script src="../scripts/validation.js"></script>
